--- a/photos.css
+++ b/photos.css
@@ -3,3 +3,11 @@ img {
   float: left;
   margin: 1.66%;
 }
+
+p {
+  font-family: "Raleway";
+  margin-left: 1.66%;
+  font-size: 23px;
+  font-weight: 800;
+  text-transform: uppercase;
+}
