--- a/photos.css
+++ b/photos.css
@@ -7,7 +7,10 @@ img {
 p {
   font-family: "Raleway";
   margin-left: 1.66%;
+  margin-right: 1.66%;
   font-size: 23px;
   font-weight: 800;
   text-transform: uppercase;
+  border-bottom: 2px solid #f1f1f1;
+  padding-bottom: 20px;
 }
